# seasocks

./: .clang-format  .codecov.yml  .cproject  .editorconfig  .gdb_history  .gitignore  .project  .travis.yml  CMakeLists.txt  LICENSE  Makefile  Makefile.in  Notes  README.md  TODO.md  conanfile.py  configure.ac  gdb.txt  makedeb.sh  package.fig
.github/workflows/: ci.yml  cmake.yml  codeql.yml
Build.harvest/: DrwLabeledBuild.linux.nant
cmake/: ClangFormat.cmake  CompilerCheck.cmake  Config.h.in  EmbeddedContent.cmake  Findgmock.cmake  Findgtest.cmake  SeasocksConfig.cmake.in
debian/: README.Debian  README.source  changelog  control  debhelper-build-stamp  files  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  seasocks.cron.d.ex  seasocks.doc-base.EX  watch.ex
debian/seasocks/DEBIAN/: control  md5sums
debian/seasocks/usr/share/doc/seasocks/: copyright
scripts/: c++11.m4  ci_setup_clang.sh  config-for-drw  gen_embedded.py  setup_catch.sh
src/: CMakeLists.txt
src/app/c/: CMakeLists.txt  async_test.cpp  main.cpp  multiserver.cpp  ph_test.cpp  serve.cpp  streaming_test.cpp  ws_chatroom.cpp  ws_echo.cpp  ws_test.cpp  ws_test_poll.cpp
src/async_test_web/: app.js  index.html
src/main/c/: CMakeLists.txt  Connection.cpp  Favicon.cpp  HybiAccept.cpp  HybiPacketDecoder.cpp  Logger.cpp  PageRequest.cpp  Response.cpp  Server.cpp  StringUtil.cpp  UsernameAccessControl.cpp  connection.cpp  connection.h  ignoringlogger.h  json.cpp  logger.cpp  main.cpp  printflogger.h  server.cpp  server.h  ssoauthenticator.cpp  stringutil.cpp  stringutil.h  websocket.h
src/main/c/internal/: .gitignore  Base64.cpp  Base64.h  ConcreteResponse.h  Config.h.in  Debug.h  Embedded.h  Favicon.h  HeaderMap.h  HybiAccept.h  HybiPacketDecoder.h  LogStream.h  PageRequest.h  RaiiFd.h  Version.h  ZlibContext.h  base64.cpp
src/main/c/md5/: md5.cpp  md5.h
src/main/c/seasocks/: AccessControl.h  Connection.h  Credentials.h  IgnoringLogger.h  Logger.h  PageHandler.h  PrintfLogger.h  Request.cpp  Request.h  Response.h  ResponseBuilder.cpp  ResponseBuilder.h  ResponseCode.cpp  ResponseCode.h  ResponseCodeDefs.h  ResponseWriter.h  Server.h  ServerImpl.h  SimpleResponse.h  StrCompare.h  StreamingResponse.cpp  StreamingResponse.h  StringUtil.h  SynchronousResponse.cpp  SynchronousResponse.h  ToString.h  TransferEncoding.h  UsernameAccessControl.h  WebSocket.h  ZlibContext.cpp  ZlibContext.h  ZlibContextDisabled.cpp  connection.h  credentials.h  json.h  logger.h  mutex.h  printflogger.h  server.h  ssoauthenticator.h  (+2 more)
src/main/c/seasocks/util/: CrackedUri.h  CrackedUriPageHandler.h  FileResponse.h  Html.h  Json.h  PathHandler.h  RootPageHandler.h  StaticResponseHandler.h
src/main/c/seasocks/win32/: wepoll.c  win_byteswap.h  win_getopt.h  winsock_includes.h
src/main/c/sha1/: sha1.cpp  sha1.h
src/main/c/util/: CrackedUri.cpp  FileResponse.cpp  Json.cpp  PathHandler.cpp  RootPageHandler.cpp
src/main/web/: CMakeLists.txt  _error.css  _error.html  _seasocks.css  _stats.html
src/main/web/scripts/: gen_embedded.py
src/test/: suppressions.txt
src/test/c/: CMakeLists.txt  ConnectionTests.cpp  CrackedUriTests.cpp  EmbeddedContentTests.cpp  HeaderMapTests.cpp  HtmlTests.cpp  HybiTests.cpp  JsonTests.cpp  MockServerImpl.h  RequestTest.cpp  ResponseBuilderTests.cpp  ResponseTests.cpp  ServerTests.cpp  StringUtilTests.cpp  ToStringTests.cpp  catch.hpp  test_connection.cpp  test_hybi.cpp  test_main.cpp  test_ssoauthenticator.cpp  tinytest.h
src/web/: app.js  index.html
src/ws_chatroom_web/: app.js  index.html
src/ws_test_web/: index.html
test_package/: README.md
win32/: wepoll.c  wepoll.h  win_byteswap.h  win_getopt.h  win_unistd.h  winsock_includes.h
